# afriaTwitterBot

./: .gitignore  Procfile  README.md  last.txt  main.py  pyproject.toml  requirements.txt
afriabot/: main.py  stream.py
settings/: last.txt
templates/: index.html
tests/: test_afriabot.py
